workspace(name = "dbc_parser")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# GoogleTest dependency
http_archive(
    name = "com_google_googletest",
    urls = ["https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip"],
    strip_prefix = "googletest-1.14.0",
    sha256 = "1f357c27ca988c3f7c6b4bf68a9395005ac6761f034046e9dde0896e3aba00e4",
)

# PEGTL dependency
http_archive(
    name = "taocpp_pegtl",
    urls = ["https://github.com/taocpp/PEGTL/archive/refs/tags/3.2.7.zip"],
    strip_prefix = "PEGTL-3.2.7",
    sha256 = "d6cd113d8bd14e98bcbe7b7f8fc1e1e33448dc359e8cd4cca30e034edc199feb",
) 