package(default_visibility = ["//visibility:public"])

cc_library(
    name = "dbc_parser",
    hdrs = glob(["**/*.h"], allow_empty = True),
    srcs = glob(["**/*.cc"], allow_empty = True, exclude = ["**/*_test.cc"]),
    copts = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
        "-Werror",
    ],
    strip_include_prefix = "src",
) 