package(default_visibility = ["//visibility:private"])

cc_test(
    name = "dbc_parser_test",
    srcs = glob(["**/*_test.cc"], allow_empty = True),
    deps = [
        "//src/dbc_parser:dbc_parser",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
        "-Werror",
    ],
    includes = ["../../src"],
)

test_suite(
    name = "all_tests",
    visibility = ["//visibility:public"],
    tests = [
        "//tests/dbc_parser/parser:parser_tests",
    ],
) 