cc_test(
    name = "string_utils_test",
    srcs = ["string_utils_test.cc"],
    deps = [
        "//src/dbc_parser/core:string_utils",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
        "-Werror",
    ],
) 